# tpu-perf

./: CMakeLists.txt
pipeline/: SGDevicePool.h  interface.cpp  interface.h  tpu_kernels.hpp
python/tpu_perf/: infer.py
